--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  
+  "homepage": "https://klaudiasikora.github.io/ToDo-App/",
+  …
+}
+
+{
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
